--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -33,17 +33,17 @@
         <div class="dashboard-images-wrapper">
             <!-- First Image - Static -->
             <div class="dashboard-image dashboard-image-1">
-                <img src="{{ url_for('static', filename='images/bg.png') }}" alt="Dashboard 1" class="dashboard-img">
+                <img src="{{ url_for('static', filename='images/1 (2).png') }}" alt="Dashboard 1" class="dashboard-img">
             </div>
             
             <!-- Second Image - Slides from right on scroll -->
             <div class="dashboard-image dashboard-image-2">
-                <img src="{{ url_for('static', filename='images/bg.png') }}" alt="Dashboard 2" class="dashboard-img">
+                <img src="{{ url_for('static', filename='images/4 (2).png') }}" alt="Dashboard 2" class="dashboard-img">
                     </div>
                     
             <!-- Third Image - Slides from right on scroll -->
             <div class="dashboard-image dashboard-image-3">
-                <img src="{{ url_for('static', filename='images/bg.png') }}" alt="Dashboard 3" class="dashboard-img">
+                <img src="{{ url_for('static', filename='images/last.png') }}" alt="Dashboard 3" class="dashboard-img">
             </div>
         </div>
     </div>
